client/src/app/layout/styles.module.css
.dropdownMain {
    margin-left:24px;
    margin-right: 24px;
    position:relative;
}

.dropdownBtn {
    
}

.dropdownMain:hover .dropdownContentContainer {
    display: block;
    cursor: pointer;
}

.dropdownContentContainer {
    display:none;
}

.dropdownContent {
    display:flex;
    flex-direction: column;
    position:absolute;
    width:100%;
    border-radius:4px;
}

.dropdownLink:first-child {
    border-top-left-radius: 4px;
    border-top-right-radius: 4px;
}

.dropdownLink:last-child {
    border-bottom-left-radius: 4px;
    border-bottom-right-radius: 4px;
}

.dropdownLink {
    display:block;
    padding: 8px 12px;
    width: 150px;
    text-decoration: none;
    background-color: #ECECEC;
    transition: background-color 0.4s;
    color: #333;
}

.dropdownLink:hover {
    background-color: #CFCFCF;
}

.navigationContainer {
    display: flex;
    flex-direction: row;
}

